--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="logo">
         <a href="index.html">
-            <img src="../imagens/logo.jpg" alt="logo">
+            <img src="./logo.jpg" alt="logo">
         </a>
         </div>
         <input type="checkbox" id="chec" onclick="call_menu()">
