--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="produtos">
             <ul class="thumbs">
                 <li>
-                    <a href=".produto"><img src="../imagens/colar (7).jpg" alt=""></a>
+                    <a href=".produto"><img src="./colar (7).jpg" alt=""></a>
                     <div class="product-name">
                         <span class="product-title">Colar foliado a ouro e cravejado</span>
                     </div>
@@ -95,7 +95,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href=".produto"><img src="../imagens/colar (11).jpg" alt=""></a>
+                    <a href=".produto"><img src="./colar (11).jpg" alt=""></a>
                     <div class="product-name">
                         <span class="product-title">Colar de diamantes</span>
                     </div>
@@ -110,7 +110,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href=".produto"><img src="../imagens/colar (8).jpg" alt=""></a>
+                    <a href=".produto"><img src="./colar (8).jpg" alt=""></a>
                     <div class="product-name">
                         <span class="product-title">Colar Testato a ouro e cravejado</span>
                     </div>
@@ -125,7 +125,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href=".produto"><img src="../imagens/colar (9).jpg" alt=""></a>
+                    <a href=".produto"><img src="./colar (9).jpg" alt=""></a>
                     <div class="product-name">
                         <span class="product-title">Colar comum</span>
                     </div>
